--- a/client/components/main/fonts.styl
+++ b/client/components/main/fonts.styl
@@ -1,12 +1,12 @@
 @font-face
-  font-family: Trebuchet
+  font-family: 'Trebuchet'
   font-style: normal
   font-weight: 400
   src: local("Trebuchet MS");
   src: url("/usr/share/fonts/truetype/msttcorefonts/trebuc.ttf")
 
 @font-face
-  font-family: Trebuchet
+  font-family: 'Trebuchet'
   font-style: normal
   font-weight: 700
   src: local("Trebuchet MS");
